--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,15 @@
     "psr-4": {
       "SvenJuergens\\BeloginImages\\": "Classes/"
     }
+  },
+  "config": {
+    "vendor-dir": ".Build/vendor",
+    "bin-dir": ".Build/bin"
+  },
+  "extra": {
+    "typo3/cms": {
+      "cms-package-dir": "{$vendor-dir}/typo3/cms",
+      "web-dir": ".Build/Web"
+    }
   }
 }
