--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
   "license": "GPL-2.0+",
   "type": "typo3-cms-extension",
   "require": {
-    "typo3/cms-core": ">=7.6.0 <9.0.0",
-    "typo3/cms-frontend": ">=7.6.0 <9.0.0"
+    "typo3/cms-core": "^7.6.0 || ^9.0"
   },
   "replace": {
     "belogin_images": "self.version",
