--- a/.travis.yml
+++ b/.travis.yml
@@ -4,23 +4,11 @@ matrix:
   fast_finish: true
   include:
     - php: 7.1
-      env: TYPO3="dev-master as 8.7.0"
-    - php: 7.1
-      env: TYPO3=^8.7
-    - php: 7.1
-      env: TYPO3=^7.6
-    - php: 7.1
-      env: TYPO3="7.x-dev"
+      env: TYPO3_VERSION=^8
     - php: 7.0
-      env: TYPO3="dev-master as 8.7.0"
-    - php: 7.0
-      env: TYPO3=^8.7
-    - php: 7.0
-      env: TYPO3=^7.6
-    - php: 5.6
-      env: TYPO3=^7.6
-    - php: 5.5
-      env: TYPO3=^7.6
+      env: TYPO3_VERSION=^8
+    - php: 7.2
+      env: TYPO3_VERSION=^9
 
 addons:
   apt:
@@ -34,13 +22,15 @@ cache:
 sudo: false
 
 before_install:
+  - composer self-update
+  - composer --version
   - if php -i | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
 
 before_script:
-  - composer require typo3/cms="$TYPO3"
+  - phpenv config-rm xdebug.ini
+  - composer require typo3/minimal=$TYPO3_VERSION
+  # Restore composer.json
   - git checkout composer.json
-  - mkdir -p .Build/Web/typo3conf/ext/
-  - if [ ! -L .Build/Web/typo3conf/ext/belogin_images ]; then ln -snvf ../../../../. .Build/Web/typo3conf/ext/belogin_images; fi
   - export TYPO3_PATH_WEB=$PWD/.Build/Web
 
 script:
