--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
       "email": "typo3@blue-side.de"
     }
   ],
-  "license": "GPL-2.0+",
+  "license": "GPL-2.0-or-later",
   "type": "typo3-cms-extension",
   "require": {
-    "typo3/cms-core": "^7.6.0 || ^9.0"
+    "typo3/cms-core": "^7.6 || ^8.7 || ^9.5"
   },
   "replace": {
     "belogin_images": "self.version",
