--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "license": "GPL-2.0-or-later",
   "type": "typo3-cms-extension",
   "require": {
-    "typo3/cms-core": "^7.6 || ^8.7 || ^9.5"
+    "typo3/cms-core": "^7.6 || ^8.7 || ^9.5 || ^10.3"
   },
   "replace": {
     "belogin_images": "self.version",
