--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "typo3/cms-core": "^7.6 || ^8.7 || ^9.5 || ^10.3"
   },
   "replace": {
-    "belogin_images": "self.version",
+    "svenjuergens/belogin_images": "self.version",
     "typo3-ter/belogin-images": "self.version"
   },
   "autoload": {
