--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
   "license": "GPL-2.0-or-later",
   "type": "typo3-cms-extension",
   "require": {
-    "typo3/cms-core": "^7.6 || ^8.7 || ^9.5 || ^10.3"
+    "typo3/cms-core": "^9.5 || ^10.4",
+    "ext-json": "*"
   },
   "replace": {
-    "svenjuergens/belogin_images": "self.version",
     "typo3-ter/belogin-images": "self.version"
   },
   "autoload": {
