[TASK] added php linter and php_cs_fixer in v3

--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,38 @@
       "SvenJuergens\\BeloginImages\\": "Classes/"
     }
   },
-  "config": {
-    "vendor-dir": ".Build/vendor",
-    "bin-dir": ".Build/bin"
-  },
   "extra": {
     "typo3/cms": {
-      "cms-package-dir": "{$vendor-dir}/typo3/cms",
-      "web-dir": ".Build/Web",
+      "app-dir": ".Build",
+      "web-dir": ".Build/public",
       "extension-key": "belogin_images"
     }
+  },
+  "config": {
+    "vendor-dir": ".Build/vendor",
+    "vendor_dir": ".Build/vendor",
+    "sort-packages": true,
+    "platform": {
+      "php": "7.4"
+    }
+  },
+  "scripts": {
+    "test:php:lint": [
+      "parallel-lint --exclude .Build ."
+    ],
+    "test": [
+      "@test:php:lint"
+    ],
+    "cgl": [
+      "php-cs-fixer fix --config=.php-cs-fixer.php --diff --dry-run --verbose"
+    ],
+    "cglFix": [
+      "php-cs-fixer fix --config=.php-cs-fixer.php"
+    ]
+  },
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^3",
+    "php-parallel-lint/php-console-highlighter": "^0.5.0",
+    "php-parallel-lint/php-parallel-lint": "^1.2"
   }
 }
