--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,9 @@
   "license": "GPL-2.0-or-later",
   "type": "typo3-cms-extension",
   "require": {
-    "typo3/cms-core": "^9.5.39 || ^10.4.34 || ^11.5.21 || ^12.4",
-    "ext-json": "*"
-  },
-  "replace": {
-    "typo3-ter/belogin-images": "self.version"
+    "typo3/cms-core": "^11.5.36 || ^12.4 || ^13.0",
+    "ext-json": "*",
+	  "php": ">=8.0.0"
   },
   "autoload": {
     "psr-4": {
@@ -25,8 +23,6 @@
   },
   "extra": {
     "typo3/cms": {
-      "app-dir": ".Build",
-      "web-dir": ".Build/public",
       "extension-key": "belogin_images"
     }
   },
